vlib/v/checker/tests/interop_func_body_err.out
vlib/v/checker/tests/interop_func_body_err.vv:1:23: error: interop functions cannot have a body
    1 | fn C.printf(s string) {
      |                       ^
    2 | 
    3 | }
